tests/snapshots/snapshots__assertion_free_rust_tokio_test.snap
---
source: tests/snapshots.rs
expression: diagnostics
---
- code: assertion-free-test
  severity: warning
  message: "test `t` has no assertions"
  primary:
    file: x.rs
    byte_range:
      start: 15
      end: 48
    line_start: 2
    col_start: 1
    line_end: 4
    col_end: 2
  helps:
    - "a test that doesn't assert anything can't meaningfully fail — add assertions or delete the test"
