tests/snapshots/snapshots__assertion_free_typescript_it_no_expect.snap
---
source: tests/snapshots.rs
expression: diagnostics
---
- code: any-type
  severity: warning
  message: "`any` type defeats the type checker"
  primary:
    file: x.ts
    byte_range:
      start: 18
      end: 21
    line_start: 1
    col_start: 19
    line_end: 1
    col_end: 22
  helps:
    - "use `unknown` for unknown shapes, or a specific type"
- code: assertion-free-test
  severity: warning
  message: "test `forgot` has no assertions"
  primary:
    file: x.ts
    byte_range:
      start: 23
      end: 83
    line_start: 2
    col_start: 1
    line_end: 5
    col_end: 3
  helps:
    - "a test that doesn't assert anything can't meaningfully fail — add assertions or delete the test"
- code: debug-print
  severity: warning
  message: "debug output: `console.log`"
  primary:
    file: x.ts
    byte_range:
      start: 73
      end: 76
    line_start: 4
    col_start: 13
    line_end: 4
    col_end: 16
  helps:
    - remove before merging or replace with a real logger
