tests/snapshots/snapshots__assertion_free_typescript_it_with_expect.snap
---
source: tests/snapshots.rs
expression: diagnostics
---
- code: any-type
  severity: warning
  message: "`any` type defeats the type checker"
  primary:
    file: x.ts
    byte_range:
      start: 18
      end: 21
    line_start: 1
    col_start: 19
    line_end: 1
    col_end: 22
  helps:
    - "use `unknown` for unknown shapes, or a specific type"
- code: any-type
  severity: warning
  message: "`any` type defeats the type checker"
  primary:
    file: x.ts
    byte_range:
      start: 45
      end: 48
    line_start: 2
    col_start: 23
    line_end: 2
    col_end: 26
  helps:
    - "use `unknown` for unknown shapes, or a specific type"
