tests/snapshots/snapshots__fixme_and_xxx_markers.snap
---
source: tests/snapshots.rs
expression: diagnostics
---
- code: todo-marker
  severity: note
  message: "`FIXME` marker"
  primary:
    file: x.rs
    byte_range:
      start: 3
      end: 8
    line_start: 1
    col_start: 4
    line_end: 1
    col_end: 9
  helps:
    - address before merging or convert to a tracked issue
- code: todo-marker
  severity: note
  message: "`XXX` marker"
  primary:
    file: x.rs
    byte_range:
      start: 21
      end: 24
    line_start: 2
    col_start: 4
    line_end: 2
    col_end: 7
  helps:
    - address before merging or convert to a tracked issue
