tests/snapshots/snapshots__hardcoded_secrets_basic.snap
---
source: tests/snapshots.rs
expression: diagnostics
---
- code: hardcoded-secret
  severity: error
  message: possible AWS access key id
  primary:
    file: x.ts
    byte_range:
      start: 11
      end: 31
    line_start: 1
    col_start: 12
    line_end: 1
    col_end: 32
  notes:
    - commit history retains secrets even after deletion
  helps:
    - rotate the credential and load it from env or a secret manager
- code: hardcoded-secret
  severity: error
  message: possible GitHub personal access token
  primary:
    file: x.ts
    byte_range:
      start: 45
      end: 89
    line_start: 2
    col_start: 12
    line_end: 2
    col_end: 56
  notes:
    - commit history retains secrets even after deletion
  helps:
    - rotate the credential and load it from env or a secret manager
