tests/snapshots/snapshots__java_empty_catch.snap
---
source: tests/snapshots.rs
expression: diagnostics
---
- code: empty-catch
  severity: warning
  message: "empty `catch` block silently swallows the exception"
  primary:
    file: C.java
    byte_range:
      start: 86
      end: 108
    line_start: 4
    col_start: 9
    line_end: 4
    col_end: 31
  helps:
    - "either handle the error, log it, or comment why it's safe to ignore"
